--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "font-awesome": "^4.7.0",
     "npm": "^6.14.4",
     "ramda": "^0.25.0",
-    "react": "^16.5.0",
+    "react": ">=15",
     "react-dom": "^16.5.0",
+    "react-router-dom": "^5.1.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "styled": "^1.0.0",
     "styled-components": "^3.4.5"
   }
